Fixed dark mode color on about links

--- a/less/about.less
+++ b/less/about.less
@@ -425,6 +425,9 @@
             .cs-button-solid {
                 background-color: var(--primary);
             }
+            .cs-link {
+                color: var(--bodyTextColorWhite);
+            }
         }
     }
 }
